# hoba-hoba

./: .dockerignore  .gitignore  .venv  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  main.py  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
backend/: database.py  main.py
backend/app/: crawler.py  web.py
backend/models/: user.py
backend/podcast/: model.py
backend/utils/: mango.py
bitly/: client.go
core/: app.py
docs/requests/: api.http
global/: settings.go
handlers/: api.py  schema.py
libs/: html_strip.go  html_strip_test.go  list.go  string.go
modules/podcast/: __init__.py  struct.py  views.py
old/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
old/bitly/: client.go  type.go
old/global/: settings.go
old/requests/: client.go  type.go
old/rss/: client.go  type.go
old/telegram/: client.go  type.go
old/test-data/: valid-rss-feed.xml
requests/: client.go  type.go
rss/: client.go  type.go
telegram/: client.go  type.go
