[tool.poetry]
name = "hoba-hoba"
version = "1.0.0"
description = ""
authors = ["Denis Malin <denis@malina.page>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
