[tool.poetry]
name = "hoba-hoba"
version = "1.0.0"
description = ""
authors = ["Denis Malin <denis@malina.page>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.73.0"
uvicorn = "^0.16.0"
motor = "^2.5.1"
uvloop = "^0.16.0"
aiomonitor = "^0.4.5"
aiohttp = "^3.8.1"
cchardet = "^2.1.7"
aiodns = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
